--- a/number/number0-1.html
+++ b/number/number0-1.html
@@ -1,1 +1,17 @@
+<html>
 
+<head>
+  <meta charset="UTF-8">
+  <title>数字识别</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
+</head>
+
+<body>
+  <h1>数字识别</h1>
+  <p>这是一个数字识别，可以识别手写数字0和1 </p>
+  <script src="main.js"></script>
+</body>
+
+</html>
