--- a/number/number-01.html
+++ b/number/number-01.html
@@ -11,7 +11,7 @@
 <body>
   <h1>数字识别</h1>
   <p>这是一个数字识别，可以识别手写数字0和1 </p>
-  <script src="number0-1.js"></script>
+  <script src="number-01.js"></script>
 </body>
 
 </html>
